syntax = "proto3";

package careerhub.processor.processor_grpc;
option go_package = "careerhub/processor/processor_grpc";

service DataProcessor{
    rpc CloseJobPostings(JobPostings) returns (BoolResponse);
    rpc RegisterJobPostingInfo(JobPostingInfo) returns (BoolResponse);
    rpc RegisterCompany(Company) returns (BoolResponse);
}

message JobPostings{
    repeated JobPostingId jobPostingIds = 1;
}

message JobPostingId{
    string site = 1;
    string postingId = 2;
}



message JobPostingInfo{
	JobPostingId jobPostingId		= 1;
	string companyId      			= 2;
	string companyName    			= 3;
	repeated string jobCategory 	= 4;
	MainContent    mainContent 		= 5;
	repeated string requiredSkill	= 6;
	repeated string tags			= 7;
	Career requiredCareer			= 8;
	optional int64 publishedAt		= 9;
	optional int64 closedAt			= 10;
	repeated string address			= 11;
	int64 createdAt					= 12;
}

message MainContent{
   string postUrl					= 1;
	string title					= 2;
	string intro					= 3;
	string mainTask					= 4;
	string qualifications			= 5;
	string preferred				= 6;
	string benefits					= 7;
	optional string recruitProcess	= 8;

}



message Career{
    optional int32 min				= 1;
    optional int32 max				= 2;
}


message Company{
	string site = 1;
    string companyId= 2;
	string name = 3;
	optional string companyUrl = 	4;
	repeated string companyImages = 5;
	string description   = 		6;
	string companyLogo   = 		7;
	int64 createdAt					= 8;
}

message BoolResponse{
	bool success = 1;
}